--- a/application-dev.yml
+++ b/application-dev.yml
@@ -2,3 +2,7 @@ management:
   security:
     enabled:
       false
+logging:
+   level:
+      org.springframework: INFO
+      org.springframework.security: DEBUG
