--- a/application.yml
+++ b/application.yml
@@ -4,4 +4,4 @@ spring:
 security:
    oauth2:
       resource:
-         userInfoUri: http://identity-service:8080/user
+         userInfoUri: http://identity-server:8080/user
